--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
   text-align: center;
+  display: flex;
 }
 
 body {
   background-color:#f8f6f4; 
+  text-align: center;
+  /* flex-wrap: wrap; */
 }
 
 .CenterElements {
@@ -12,3 +15,11 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+/* .navbar-toggler{
+  border: none;
+  position: fixed;
+  right: 20px;
+  top: 40px;
+  z-index: 1;
+} */
